pipeline/terraform/azure-mhs-environment/mhs-adaptor-aks/dynamodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: dynamodb
  name: dynamodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dynamodb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: dynamodb
    spec:
      containers:
      - image: nhsdev/nia-dynamodb-local:1.0.3
        imagePullPolicy: ""
        name: dynamodb
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
