pipeline/terraform/azure-mhs-environment/mhs-adaptor-aks/inbound-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: inbound
  name: inbound
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: inbound
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: inbound
    spec:
      containers:
      - env:
        - name: MHS_INBOUND_QUEUE_BROKERS
          value: amqp://rabbitmq:5672
        - name: MHS_INBOUND_QUEUE_NAME
          value: inbound
        - name: MHS_LOG_LEVEL
          value: DEBUG
        - name: MHS_STATE_TABLE_NAME
          value: mhs_state
        - name: MHS_SYNC_ASYNC_STATE_TABLE_NAME
          value: sync_async_state
        - name: MHS_SECRET_INBOUND_QUEUE_PASSWORD
          value: guest
        - name: MHS_SECRET_INBOUND_QUEUE_USERNAME
          value: guest
        - name: MHS_SECRET_PARTY_KEY
          value: party_key
        - name: MHS_SECRET_CLIENT_CERT
          value: "Here goes client cert"
        - name: MHS_SECRET_CLIENT_KEY	
          value: "Here goes client cert key"
        - name: MHS_SECRET_CA_CERTS
          value: "Here goes list of CA certs"
        - name: MHS_DB_ENDPOINT_URL
          value: http://dynamodb:8000
        - name: MHS_INBOUND_USE_SSL
          value: "false"
        - name: MHS_INBOUND_QUEUE_MESSAGE_TTL_IN_SECONDS
          value: "0"
        - name: SERVICE_PORTS
          value: 443,80
        - name: TCP_PORTS
          value: "443"
        image: nhsdev/nia-mhs-inbound:1.0.0
        imagePullPolicy: ""
        name: inbound
        ports:
        - containerPort: 443
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
