pipeline/terraform/azure-mhs-environment/mhs-adaptor-aks/dynamodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: dynamodb
  name: dynamodb
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: dynamodb
status:
  loadBalancer: {}
