pipeline/terraform/azure-mhs-environment/mhs-adaptor-aks/inbound-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: inbound-lb
  name: inbound-lb
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 443
  - name: "8079"
    port: 8079
    targetPort: 80
  selector:
    io.kompose.service: inbound-lb
status:
  loadBalancer: {}
