pipeline/terraform/azure-mhs-environment/mhs-adaptor-aks/inbound-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: inbound
  name: inbound
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 443
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: inbound
status:
  loadBalancer: {}
