pipeline/terraform/azure-mhs-environment/mhs-adaptor-aks/outbound-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: outbound-lb
  name: outbound-lb
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: outbound-lb
status:
  loadBalancer: {}
