pipeline/terraform/azure-mhs-environment/mhs-adaptor-aks/route-ingress80.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: route80
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: route80.fe50331779a548dda05c.ukwest.aksapp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: route
          servicePort: 80
